--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+#map {
+    width: 100%;
+    height: 100%;
+}
+
 #search-container {
     position: absolute;
     top: 10px;
     right: 10px;
-    z-index: 1000; /* Asegura que esté por encima del mapa */
+    z-index: 1000;
     display: flex;
     background-color: white;
     padding: 5px;
