--- a/style.css
+++ b/style.css
@@ -130,3 +130,22 @@ html, body {
     font-size: 16px;
     color: #F9A620;
 }
+
+/* ESTILOS PARA EL NUEVO BOTÓN DE RESET */
+#reset-button {
+    position: absolute;
+    bottom: 20px;
+    left: 10px;
+    z-index: 999; /* Un poco menos que el formulario */
+    background: white;
+    padding: 5px 10px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 0 1px 5px rgba(0,0,0,0.65);
+    cursor: pointer;
+}
+
+#reset-button:hover {
+    background: #f4f4f4;
+}
